# Book-recommender-system

./: .gitignore  README.md  pyproject.toml  requirements.txt  template.py
notebooks/: EDA.ipynb
