[tool.poetry]
name = "book-recommender"
version = "0.1.0"
description = "Book recommendation system"
authors = ["EL ANSARI Mostapha <elansarimostapha011@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
fastapi = "^0.103.0"
torch = "^2.0.1"
numpy = "^1.26.0"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.4.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
